# ray-tracer-book

./: Cargo.toml  README.md
src/: canvas.rs  color.rs  intersectable.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  ray.rs  sphere.rs  tuple.rs  util.rs  world.rs
tests/: test_canvas.rs  test_color.rs  test_light.rs  test_material.rs  test_matrix.proptest-regressions  test_matrix.rs  test_matrix_transforms.rs  test_ray.rs  test_sphere.rs  test_tuple.proptest-regressions  test_tuple.rs  test_util.rs  test_world.rs
