[package]
name = "book-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "projectile"

[dev-dependencies]
proptest = "1.2.0"

[dependencies]
array2d = "0.3.0"
auto_ops = "0.3.0"
clap = { version = "4.3.21", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.20"
png = "0.17.9"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
regex = "1.9.3"
structured-logger = "1.0.3"
